firewall_conf
# Generated by iptables-save v1.4.21 on Mon Nov  4 10:24:10 2019
*filter

:INPUT DROP [2:72]
:FORWARD DROP [149:17679]
:OUTPUT DROP [0:0]

-A INPUT -i lo -j ACCEPT
-A INPUT -s 192.168.20.2/32 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.10.3/32 -d 192.168.20.4/32 -p tcp -m tcp --sport 8080 -j ACCEPT
-A FORWARD -s 192.168.20.3/32 -i eth2 -o eth0 -j ACCEPT
-A FORWARD -d 192.168.20.3/32 -i eth0 -o eth2 -j ACCEPT
-A FORWARD -s 192.168.20.4/32 -d 192.168.10.3/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -s 192.168.20.4/32 -d 192.168.10.3/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -s 192.168.20.4/32 -d 192.168.10.3/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -d 192.168.20.2/32 -p tcp -m tcp --sport 22 -m state --state ESTABLISHED -j ACCEPT
COMMIT
# Completed on Mon Nov  4 10:24:10 2019
# Generated by iptables-save v1.4.21 on Mon Nov  4 10:24:10 2019
*nat
:PREROUTING ACCEPT [2416:185451]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [1179:72455]
-A POSTROUTING -s 192.168.20.3/32 -o eth0 -j MASQUERADE
-A POSTROUTING -s 192.168.10.0/24 -o eth0 -j MASQUERADE
COMMIT
# Completed on Mon Nov  4 10:24:10 2019
